<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/abd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/abd"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:textSize="22sp"/>

    <TextView
        android:id="@+id/adnan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adnan"
        android:layout_below="@+id/abd"
        android:layout_centerHorizontal="true"
        android:textSize="22sp"
        android:layout_marginBottom="30dp"/>

    <TextView
        android:id="@+id/chingiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chingiz"
        android:layout_marginBottom="30dp"
        android:layout_below="@+id/adnan"
        android:layout_centerHorizontal="true"
        android:textSize="22sp"/>
</RelativeLayout>