<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_height="match_parent"
    android:background="@color/light_grey">
    <ScrollView
        android:id="@+id/scrollSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/UserEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:drawableLeft="@drawable/ic_username"
                android:hint="@string/username"
                android:gravity="center"
                android:inputType="textCapWords"
                />



            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:drawableLeft="@drawable/email"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:hint="@string/email"
                android:gravity="center"
                android:inputType="textEmailAddress"/>

            <EditText
                android:id="@+id/passwordSignUp"
                android:layout_width="match_parent"
                android:drawableLeft="@drawable/ic_pwd"
                android:layout_marginBottom="20dp"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:gravity="center"
                android:inputType="textPassword"/>

            <EditText
                android:id="@+id/confirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirmPassword"
                android:drawableLeft="@drawable/ic_pwd"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:inputType="textPassword"/>

            <Button
                android:id="@+id/submitButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:textSize="22sp"
                android:background="@color/blue"
                android:textColor="@color/light_grey"/>
        </LinearLayout>
    </ScrollView>


</LinearLayout>