<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <EditText
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/addmodulehere"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:inputType="textCapCharacters"/>

    <Button
        android:id="@+id/timePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chooseTime"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:onClick="showTimePicker"
        android:background="@color/blue"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/timeContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/blue"
        android:layout_marginTop="50dp"
        android:text="@string/save"
        android:onClick="save"/>


</LinearLayout>