<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@color/light_grey">

    <ImageView
        android:id="@+id/limkokwingImage"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:src="@drawable/download"
        android:layout_centerHorizontal="true"/>
    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/limkokwingImage">

        <RelativeLayout
            android:id="@+id/relative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

        <EditText
            android:id="@+id/usernameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:gravity="center"
            android:drawableLeft="@drawable/ic_username"
            android:layout_marginTop="40dp"
            android:inputType="textCapWords"/>
        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_pwd"
            android:gravity="center"
            android:hint="@string/password"


            android:layout_marginTop="30dp"

            android:layout_below="@+id/usernameEditText"
            android:inputType="textPassword"/>

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/passwordEditText"
            android:layout_below="@+id/passwordEditText">



             <Button
                 android:id="@+id/loginButton"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/login"
                 android:background="@color/blue"
                 android:layout_marginTop="12dp"
                 android:textColor="@color/light_grey"
                 />

            <TextView
                android:id="@+id/or"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:text="@string/or"
                android:layout_gravity="center|bottom"
                android:gravity="center"

                android:textSize="24sp"
                android:textColor="@color/blue"
                />
            <Button
                android:id="@+id/signButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/signUp"
                android:background="@color/blue"
                android:layout_marginTop="12dp"
                android:textColor="@color/light_grey"
                />

        </LinearLayout>
        </RelativeLayout>
    </ScrollView>


</RelativeLayout>
